--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ div{
 
 footer{
 	text-align: right;
-	padding-bottom: 10px;
-	padding-right: 10px;
+	padding: 0px 10px 10px 0px;
+	/* padding-bottom: 10px; */
+	/* padding-right: 10px; */
 }
