--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html{
+body{
 	background-color: #000000;
 	color: #FFFFFF;
 	font-family: "Lucida Grande", sans-serif;
@@ -56,7 +56,7 @@ div{
 	text-align: left;
 }
 
-footer{
+footer p{
 	text-align: right;
 	padding: 0px 10px 10px 0px;
 	/* padding-bottom: 10px; */
